vlib/v/checker/tests/no_main_mod.out
vlib/v/checker/tests/no_main_mod.v:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module a
      | ^
